--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>JavaGuide</title>
+  <title>Knowledge-Guide</title>
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
   <meta name="description" content="Description">
   <meta name="viewport"
@@ -14,10 +14,6 @@
 </head>
 
 <body>
-  <nav>
-    <a href="https://cowtransfer.com/s/fbed14f0c22a4d">图解计算机基础</a>
-    <a href="https://wx.zsxq.com/dweb2/index/group/48418884588288">知识星球</a>
-  </nav>
   <div id="app"></div>
   <!-- docsify-edit-on-github -->
   <script src="//unpkg.com/docsify-edit-on-github/index.js"></script>
@@ -27,8 +23,8 @@
       navigator.serviceWorker.register('sw.js')
     }
     window.$docsify = {
-      name: 'JavaGuide',
-      repo: 'https://github.com/Snailclimb/JavaGuide',
+      name: 'Knowledge-Guide',
+      repo: 'https://github.com/SinclairChen/Knowledge-Guide',
       maxLevel: 4,//最大支持渲染的标题层级
       //封面,_coverpage.md
       //coverpage: true,
@@ -51,7 +47,7 @@
         language: 'chinese'
       },
       plugins: [
-        EditOnGithubPlugin.create('https://github.com/Snailclimb/JavaGuide/blob/master/')
+        EditOnGithubPlugin.create('https://github.com/SinclairChen/Knowledge-Guide/blob/master/')
       ],
     }
   </script>
